Fix disabled links by adding z-index

--- a/app/assets/stylesheets/modules/home.sass
+++ b/app/assets/stylesheets/modules/home.sass
@@ -355,6 +355,7 @@ div.emph
     width: 30px
 
 .answered-question-text
+  z-index: 100
   padding-left: 2em
   float: left
   position: relative
